sd/sdge/guiao1/store/cbcast/20230307T104205.000Z/jepsen.log
2023-03-07 10:42:05,759{GMT}	INFO	[jepsen test runner] jepsen.core: Command line:
lein run test -w cbcast --bin wrong-causal-broadcast.py --time-limit 5 --node-count 3 --concurrency 1n
2023-03-07 10:42:05,839{GMT}	INFO	[jepsen test runner] jepsen.core: Running test:
{:args []
 :remote
 #jepsen.control.retry.Remote{:remote #jepsen.control.scp.Remote{:cmd-remote #jepsen.control.clj_ssh.Remote{:concurrency-limit 8,
                                                                                                            :conn-spec nil,
                                                                                                            :session nil,
                                                                                                            :semaphore nil},
                                                                 :conn-spec nil},
                              :conn nil}
 :log-net-send false
 :node-count 3
 :max-txn-length 4
 :concurrency 3
 :db
 #object[maelstrom.db$db$reify__16817
         "0x529a2d6f"
         "maelstrom.db$db$reify__16817@529a2d6f"]
 :max-writes-per-key 16
 :leave-db-running? false
 :name "cbcast"
 :logging-json? false
 :start-time
 #object[org.joda.time.DateTime "0x6bb2b8d4" "2023-03-07T10:42:05.000Z"]
 :nemesis-interval 10
 :net
 #object[maelstrom.net$jepsen_net$reify__15673
         "0x64230d44"
         "maelstrom.net$jepsen_net$reify__15673@64230d44"]
 :client
 #object[maelstrom.workload.cbcast$client$reify__18677
         "0x1ff584d7"
         "maelstrom.workload.cbcast$client$reify__18677@1ff584d7"]
 :barrier
 #object[java.util.concurrent.CyclicBarrier
         "0x7752f9fe"
         "java.util.concurrent.CyclicBarrier@7752f9fe"]
 :log-stderr false
 :pure-generators true
 :ssh {:dummy? true}
 :rate 5
 :checker
 #object[jepsen.checker$compose$reify__8787
         "0x9588bd8"
         "jepsen.checker$compose$reify__8787@9588bd8"]
 :argv
 ("test"
  "-w"
  "cbcast"
  "--bin"
  "wrong-causal-broadcast.py"
  "--time-limit"
  "5"
  "--node-count"
  "3"
  "--concurrency"
  "1n")
 :nemesis
 (jepsen.nemesis.ReflCompose
  {:fm {:start-partition 0,
        :stop-partition 0,
        :kill 1,
        :start 1,
        :pause 1,
        :resume 1},
   :nemeses [#unprintable "jepsen.nemesis.combined$partition_nemesis$reify__17089@75edfe9a"
             #unprintable "jepsen.nemesis.combined$db_nemesis$reify__17070@468d1fcc"]})
 :nodes ["n0" "n1" "n2"]
 :test-count 1
 :latency {:mean 0, :dist :constant}
 :bin "wrong-causal-broadcast.py"
 :generator
 (jepsen.generator.TimeLimit
  {:limit 5000000000,
   :cutoff nil,
   :gen (jepsen.generator.Any
         {:gens [(jepsen.generator.OnThreads {:f #{:nemesis}, :gen nil})
                 (jepsen.generator.OnThreads
                  {:f #object[clojure.core$complement$fn__5654
                              "0x6c07666f"
                              "clojure.core$complement$fn__5654@6c07666f"],
                   :gen (jepsen.generator.Stagger
                         {:dt 400000000,
                          :next-time nil,
                          :gen ({:f :cbcast, :value 1}
                                {:f :cbcast, :value 2}
                                {:f :cbcast, :value 3}
                                {:f :cbcast, :value 4}
                                {:f :cbcast, :value 5}
                                {:f :cbcast, :value 6}
                                {:f :cbcast, :value 7}
                                {:f :cbcast, :value 8}
                                ...)})})]})})
 :log-net-recv false
 :os
 #object[maelstrom.net$jepsen_os$reify__15676
         "0x4bdec54"
         "maelstrom.net$jepsen_os$reify__15676@4bdec54"]
 :time-limit 5
 :workload :cbcast
 :consistency-models [:strict-serializable]
 :topology :grid}

2023-03-07 10:42:05,847{GMT}	INFO	[jepsen node n0] maelstrom.net: Starting Maelstrom network
2023-03-07 10:42:05,848{GMT}	INFO	[jepsen test runner] jepsen.db: Tearing down DB
2023-03-07 10:42:05,859{GMT}	INFO	[jepsen test runner] jepsen.db: Setting up DB
2023-03-07 10:42:05,861{GMT}	INFO	[jepsen node n1] maelstrom.db: Setting up n1
2023-03-07 10:42:05,861{GMT}	INFO	[jepsen node n2] maelstrom.db: Setting up n2
2023-03-07 10:42:05,862{GMT}	INFO	[jepsen node n2] maelstrom.process: launching wrong-causal-broadcast.py []
2023-03-07 10:42:05,862{GMT}	INFO	[jepsen node n1] maelstrom.process: launching wrong-causal-broadcast.py []
2023-03-07 10:42:05,865{GMT}	INFO	[jepsen node n0] maelstrom.service: Starting services: (lin-kv lin-tso lww-kv seq-kv)
2023-03-07 10:42:05,868{GMT}	INFO	[jepsen node n0] maelstrom.db: Setting up n0
2023-03-07 10:42:05,869{GMT}	INFO	[jepsen node n0] maelstrom.process: launching wrong-causal-broadcast.py []
2023-03-07 10:42:15,918{GMT}	INFO	[jepsen node n0] maelstrom.db: Tearing down n0
2023-03-07 10:42:15,918{GMT}	INFO	[jepsen node n2] maelstrom.db: Tearing down n2
2023-03-07 10:42:15,918{GMT}	INFO	[jepsen node n1] maelstrom.db: Tearing down n1
2023-03-07 10:42:16,914{GMT}	INFO	[jepsen node n0] maelstrom.net: Shutting down Maelstrom network
2023-03-07 10:42:16,920{GMT}	WARN	[jepsen test runner] jepsen.core: Test crashed!
clojure.lang.ExceptionInfo: Node n0 crashed with exit status 1. Before crashing, it wrote to STDOUT:



And to STDERR:

  File "/home/miguel/uni/4ano/sd/sdge/guiao1/wrong-causal-broadcast.py", line 19
    match msg.body.type:
          ^
SyntaxError: invalid syntax

Full STDERR logs are available in /home/miguel/uni/4ano/sd/sdge/guiao1/store/cbcast/20230307T104205.000Z/node-logs/n0.log
	at slingshot.support$stack_trace.invoke(support.clj:201)
	at maelstrom.process$stop_node_BANG_.invokeStatic(process.clj:239)
	at maelstrom.process$stop_node_BANG_.invoke(process.clj:217)
	at maelstrom.db$db$reify__16817.teardown_BANG_(db.clj:75)
	at jepsen.db$fn__3462$G__3458__3466.invoke(db.clj:11)
	at jepsen.db$fn__3462$G__3457__3471.invoke(db.clj:11)
	at clojure.core$partial$fn__5824.invoke(core.clj:2625)
	at jepsen.control$on_nodes$fn__3339.invoke(control.clj:309)
	at clojure.lang.AFn.applyToHelper(AFn.java:154)
	at clojure.lang.AFn.applyTo(AFn.java:144)
	at clojure.core$apply.invokeStatic(core.clj:665)
	at clojure.core$with_bindings_STAR_.invokeStatic(core.clj:1973)
	at clojure.core$with_bindings_STAR_.doInvoke(core.clj:1973)
	at clojure.lang.RestFn.applyTo(RestFn.java:142)
	at clojure.core$apply.invokeStatic(core.clj:669)
	at clojure.core$bound_fn_STAR_$fn__5734.doInvoke(core.clj:2003)
	at clojure.lang.RestFn.invoke(RestFn.java:408)
	at dom_top.core$real_pmap_helper$build_thread__213$fn__214.invoke(core.clj:146)
	at clojure.lang.AFn.applyToHelper(AFn.java:152)
	at clojure.lang.AFn.applyTo(AFn.java:144)
	at clojure.core$apply.invokeStatic(core.clj:665)
	at clojure.core$with_bindings_STAR_.invokeStatic(core.clj:1973)
	at clojure.core$with_bindings_STAR_.doInvoke(core.clj:1973)
	at clojure.lang.RestFn.invoke(RestFn.java:425)
	at clojure.lang.AFn.applyToHelper(AFn.java:156)
	at clojure.lang.RestFn.applyTo(RestFn.java:132)
	at clojure.core$apply.invokeStatic(core.clj:669)
	at clojure.core$bound_fn_STAR_$fn__5734.doInvoke(core.clj:2003)
	at clojure.lang.RestFn.invoke(RestFn.java:397)
	at clojure.lang.AFn.run(AFn.java:22)
	at java.base/java.lang.Thread.run(Thread.java:833)
